--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
         "source.fixAll.eslint": true
     },
     "editor.rulers": [ 140 ],
+    "scss.validate": false,
     "css.validate": false,
     "less.validate": false
 }
