--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "no",
   "main": "",
   "scripts": {
+    "start": "npm-run-all --parallel serve watch",
     "test": "echo \"Error: no test specified\" && exit 0",
     "css": "npm-run-all css-compile css-prefix css-minify",
     "DISABLE-css": "npm-run-all css-compile css-prefix css-rtl css-minify",
@@ -16,9 +17,9 @@
     "css-minify-dark": "cleancss -O1 --format breakWith=lf --source-map --source-map-inline-sources --output dist/css/bootstrap-dark.min.css dist/css/bootstrap-dark.css",
     "DISABLE-css-minify-rtl": "cleancss -O1 --format breakWith=lf --source-map --source-map-inline-sources --output dist/css/bootstrap.rtl.min.css dist/css/bootstrap.rtl.css",
     "css-lint": "npm-run-all --continue-on-error --parallel css-lint-*",
-    "css-lint-stylelint": "stylelint \"**/*.{css,scss}\" --cache --cache-location .cache/.stylelintcache --rd",
+    "css-lint-stylelint": "stylelint \"**/*.scss\" --cache --cache-location .cache/.stylelintcache --rd",
     "DISABLE-css-lint-vars": "fusv scss/",
-    "watch": "npm-run-all --parallel serve watch-*",
+    "watch": "npm-run-all --parallel watch-*",
     "watch-css-main": "nodemon --watch scss/ --ext scss --exec \"npm-run-all css-lint css-compile css-prefix css-minify\"",
     "serve": "browser-sync start --server --files \"dist/css/*.css\""
   },
