--- a/package.json
+++ b/package.json
@@ -52,6 +52,6 @@
   ],
   "dependencies": {
     "@popperjs/core": "^2.6.0",
-    "bootstrap": "^5.0.0-beta1"
+    "bootstrap": "5.0.0-beta1"
   }
 }
