Rename deployment step

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
       - run: npm run build
       - run: npm test
 
-  publish-npm:
+  deploy:
     runs-on: ubuntu-latest
     needs: build-and-test
     steps:
