Add create release

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -69,7 +69,7 @@ jobs:
 
       - run: npm publish --access=public
         env:
-          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         if: github.event_name == 'push'
 
       - uses: actions/setup-node@v2
@@ -80,4 +80,14 @@ jobs:
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        if: github.event_name == 'push'
+
+      - uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: v${{ steps.nbgv.outputs.NpmPackageVersion }}
+          release_name: v${{ steps.nbgv.outputs.NpmPackageVersion }} Release
+          draft: false
+          prerelease: false
         if: github.event_name == 'push'
