--- a/package.json
+++ b/package.json
@@ -7,13 +7,9 @@
     "start": "npm-run-all --parallel serve watch",
     "test": "echo \"Info: no test specified\" && exit 0",
     "build": "npm-run-all css",
-    "css": "npm-run-all css-compile css-prefix css-beautify css-minify",
+    "css": "npm-run-all css-compile css-prefix css-minify",
     "css-compile": "sass --style expanded --source-map --embed-sources --no-error-css --load-path=node_modules/bootstrap/scss scss/:dist/",
     "css-prefix": "postcss --config build/postcss.config.js --replace \"dist/*.css\" \"!dist/*.rtl*.css\" \"!dist/*.min.css\"",
-    "css-beautify": "npm-run-all --parallel css-beautify-*",
-    "css-beautify-main": "cleancss -O1 --format beautify  --source-map --source-map-inline-sources --output dist/bootstrap.css dist/bootstrap.css",
-    "css-beautify-night": "cleancss -O1 --format beautify --source-map --source-map-inline-sources --output dist/bootstrap-night.css dist/bootstrap-night.css",
-    "css-beautify-dark": "cleancss -O1 --format beautify --source-map --source-map-inline-sources --output dist/bootstrap-dark.css dist/bootstrap-dark.css",
     "css-minify": "npm-run-all --parallel css-minify-*",
     "css-minify-main": "cleancss -O1 --format breakWith=lf --source-map --source-map-inline-sources --output dist/bootstrap.min.css dist/bootstrap.css",
     "css-minify-night": "cleancss -O1 --format breakWith=lf --source-map --source-map-inline-sources --output dist/bootstrap-night.min.css dist/bootstrap-night.css",
@@ -22,7 +18,7 @@
     "css-lint-stylelint": "stylelint \"**/*.scss\" --cache --cache-location .cache/.stylelintcache --rd",
     "css-lint-vars": "fusv scss/",
     "watch": "npm-run-all --parallel watch-*",
-    "watch-css-main": "nodemon --watch scss/ --ext scss --exec \"npm-run-all css-lint css-compile css-prefix css-beautify\"",
+    "watch-css-main": "nodemon --watch scss/ --ext scss --exec \"npm-run-all css-lint css-compile css-prefix\"",
     "serve": "browser-sync start --server --files \"dist/*.css\"",
     "map-dark-vars": "npm-run-all --parallel map-dark-vars-*",
     "map-dark-vars-alt-to-core": "node ./build/make-dark-map.js ./build/dark-map-list.json '-alt' '' > ./scss/dark/_variables-map-alt-to-core.scss"
