added nightshade scss

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "",
   "scripts": {
     "start": "npm-run-all --parallel serve watch",
-    "test": "echo \"Info: no test specified\" && exit 0",
+    "test": "npm-run-all css-lint-*",
     "build": "npm-run-all css",
     "css": "npm-run-all css-compile css-prefix css-minify",
     "css-compile": "sass --style expanded --source-map --embed-sources --no-error-css --load-path=node_modules/bootstrap/scss scss/:dist/",
@@ -13,12 +13,15 @@
     "css-minify": "npm-run-all --parallel css-minify-*",
     "css-minify-main": "cleancss -O1 --format breakWith=lf --source-map --source-map-inline-sources --output dist/bootstrap.min.css dist/bootstrap.css",
     "css-minify-night": "cleancss -O1 --format breakWith=lf --source-map --source-map-inline-sources --output dist/bootstrap-night.min.css dist/bootstrap-night.css",
+    "css-minify-nightfall": "cleancss -O1 --format breakWith=lf --source-map --source-map-inline-sources --output dist/bootstrap-nightfall.min.css dist/bootstrap-nightfall.css",
+    "css-minify-nightshade": "cleancss -O1 --format breakWith=lf --source-map --source-map-inline-sources --output dist/bootstrap-nightshade.min.css dist/bootstrap-nightshade.css",
     "css-minify-dark": "cleancss -O1 --format breakWith=lf --source-map --source-map-inline-sources --output dist/bootstrap-dark.min.css dist/bootstrap-dark.css",
     "css-lint": "npm-run-all --continue-on-error --parallel css-lint-*",
     "css-lint-stylelint": "stylelint \"**/*.scss\" --cache --cache-location .cache/.stylelintcache --rd",
     "css-lint-vars": "fusv scss/",
     "watch": "npm-run-all --parallel watch-*",
-    "watch-css-main": "nodemon --watch scss/ --ext scss --exec \"npm-run-all css-lint css-compile css-prefix\"",
+    "watch-css-main": "nodemon --watch scss/ --ext scss --exec \"npm-run-all css-lint css-compile css-prefix && browser-sync reload\"",
+    "watch-examples": "nodemon --watch examples/ --ext html --exec \"browser-sync reload\"",
     "serve": "browser-sync start --server --files \"dist/*.css\"",
     "map-dark-vars": "npm-run-all --parallel map-dark-vars-*",
     "map-dark-vars-alt-to-core": "node ./build/make-dark-map.js ./build/dark-map-list.json '-alt' '' > ./scss/dark/_variables-map-alt-to-core.scss"
