adding eslint to the project

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,7 @@
 {
     "recommendations": [
         "editorconfig.editorconfig",
-        "stylelint.vscode-stylelint"
+        "stylelint.vscode-stylelint",
+        "dbaeumer.vscode-eslint"
     ]
 }
