--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "",
   "scripts": {
     "start": "npm-run-all --parallel serve watch",
-    "test": "npm-run-all css-lint-*",
-    "build": "npm-run-all css",
+    "test": "npm-run-all lint dist",
+    "lint": "npm-run-all --parallel css-lint js-lint",
+    "dist": "npm-run-all --parallel css js",
+    "serve": "browser-sync start --server --files \"dist/*.css\"",
     "css": "npm-run-all css-compile css-prefix css-minify",
     "css-compile": "sass --style expanded --source-map --embed-sources --no-error-css --load-path=node_modules/bootstrap/scss scss/:dist/",
     "css-prefix": "postcss --config build/postcss.config.js --replace \"dist/*.css\" \"!dist/*.rtl*.css\" \"!dist/*.min.css\"",
@@ -19,10 +21,13 @@
     "css-lint": "npm-run-all --continue-on-error --parallel css-lint-*",
     "css-lint-stylelint": "stylelint \"**/*.scss\" --cache --cache-location .cache/.stylelintcache --rd",
     "css-lint-vars": "fusv scss/",
+    "js": "npm-run-all js-compile js-minify",
+    "js-compile": "echo \"Info: Nothing to do\" && exit 0",
+    "js-minify": "echo \"Info: Nothing to do\" && exit 0",
+    "js-lint": "eslint --cache --cache-location .cache/.eslintcache --report-unused-disable-directives .",
     "watch": "npm-run-all --parallel watch-*",
     "watch-css-main": "nodemon --watch scss/ --ext scss --exec \"npm-run-all css-lint css-compile css-prefix && browser-sync reload\"",
     "watch-examples": "nodemon --watch examples/ --ext html --exec \"browser-sync reload\"",
-    "serve": "browser-sync start --server --files \"dist/*.css\"",
     "map-dark-vars": "npm-run-all --parallel map-dark-vars-*",
     "map-dark-vars-alt-to-core": "node ./build/make-dark-map.js ./build/dark-map-list.json '-alt' '' > ./scss/dark/_variables-map-alt-to-core.scss"
   },
@@ -54,15 +59,23 @@
     "web"
   ],
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^17.1.0",
+    "@rollup/plugin-node-resolve": "^11.1.1",
+    "@rollup/plugin-replace": "^2.3.4",
     "autoprefixer": "^9.8.6",
     "browser-sync": "^2.26.13",
     "clean-css-cli": "^4.3.0",
     "cross-env": "^7.0.3",
+    "eslint": "^7.19.0",
+    "eslint-config-xo": "^0.34.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-unicorn": "^27.0.0",
     "find-unused-sass-variables": "^3.1.0",
     "nodemon": "^2.0.7",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.2.4",
     "postcss-cli": "^8.3.1",
+    "rollup": "^2.38.2",
     "rtlcss": "^3.0.0",
     "sass": "^1.32.5",
     "stylelint": "^13.9.0",
