getting the hang of this js module thing

--- a/package.json
+++ b/package.json
@@ -22,16 +22,18 @@
     "css-lint-stylelint": "stylelint \"**/*.scss\" --cache --cache-location .cache/.stylelintcache --rd",
     "css-lint-vars": "fusv scss/",
     "js": "npm-run-all js-compile js-minify",
-    "js-compile": "echo \"Info: Nothing to do\" && exit 0",
-    "js-minify": "echo \"Info: Nothing to do\" && exit 0",
+    "js-compile": "rollup --environment MIN:false --config build/rollup.config.js --sourcemap",
+    "js-minify": "rollup --environment MIN:true --config build/rollup.config.js --sourcemap",
     "js-lint": "eslint --cache --cache-location .cache/.eslintcache --report-unused-disable-directives .",
     "watch": "npm-run-all --parallel watch-*",
     "watch-css-main": "nodemon --watch scss/ --ext scss --exec \"npm-run-all css-lint css-compile css-prefix && browser-sync reload\"",
+    "watch-js-main": "nodemon --watch js/src/ --ext js --exec \"npm-run-all js-lint js-compile js-minify && browser-sync reload\"",
     "watch-examples": "nodemon --watch examples/ --ext html --exec \"browser-sync reload\"",
     "map-dark-vars": "npm-run-all --parallel map-dark-vars-*",
     "map-dark-vars-alt-to-core": "node ./build/make-dark-map.js ./build/dark-map-list.json '-alt' '' > ./scss/dark/_variables-map-alt-to-core.scss"
   },
   "author": "Vino Rodrigues",
+  "homepage": "https://vinorodrigues.github.io/bootstrap-dark-5/",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -56,13 +58,26 @@
     "responsive",
     "front-end",
     "framework",
-    "web"
+    "web",
+    "dark",
+    "dark-mode",
+    "color",
+    "color-scheme",
+    "prefers-color-scheme"
   ],
   "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/plugin-proposal-private-methods": "^7.12.1",
+    "@babel/plugin-transform-async-to-generator": "^7.12.1",
+    "@babel/plugin-transform-regenerator": "^7.12.1",
+    "@babel/preset-env": "^7.12.11",
+    "@rollup/plugin-babel": "^5.2.3",
     "@rollup/plugin-commonjs": "^17.1.0",
     "@rollup/plugin-node-resolve": "^11.1.1",
     "@rollup/plugin-replace": "^2.3.4",
     "autoprefixer": "^9.8.6",
+    "babel-eslint": "^10.1.0",
     "browser-sync": "^2.26.13",
     "clean-css-cli": "^4.3.0",
     "cross-env": "^7.0.3",
@@ -76,7 +91,8 @@
     "postcss": "^8.2.4",
     "postcss-cli": "^8.3.1",
     "rollup": "^2.38.2",
-    "rtlcss": "^3.0.0",
+    "rollup-plugin-eslint": "^7.0.0",
+    "rollup-plugin-terser": "^7.0.2",
     "sass": "^1.32.5",
     "stylelint": "^13.9.0",
     "stylelint-config-twbs-bootstrap": "^2.1.0"
