--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bootstrap-dark-5",
-  "version": "0.0.3",
+  "version": "0.1.0",
   "description": "The Ancillary Guide to Dark Mode and Bootstrap 5 - A continuation of the v4 Dark Mode POC",
   "main": "",
   "scripts": {
@@ -8,7 +8,7 @@
     "test": "npm-run-all lint dist",
     "lint": "npm-run-all --parallel css-lint js-lint",
     "dist": "npm-run-all --parallel css js",
-    "serve": "browser-sync start --server --files \"dist/css/*.css\"",
+    "serve": "browser-sync start --server --files [\"dist/css/*.css\", \"dist/js/*.js\", \"examples/*.*\", \"*.html\"]",
     "css": "npm-run-all css-compile css-prefix css-minify",
     "css-compile": "sass --style expanded --source-map --embed-sources --no-error-css --load-path=node_modules/bootstrap/scss scss/:dist/css/",
     "css-prefix": "postcss --config build/postcss.config.js --replace \"dist/css/*.css\" \"!dist/css/*.rtl*.css\" \"!dist/css/*.min.css\"",
@@ -48,7 +48,7 @@
     "dist/css/*.{css,map}",
     "dist/js/*.{js,map}",
     "scss/**/*.scss",
-    "js/**/*.js"
+    "js/**/*.js",
     "README.md",
     "LICENSE.md"
   ],
@@ -80,7 +80,7 @@
     "@rollup/plugin-replace": "^2.3.4",
     "autoprefixer": "^9.8.6",
     "babel-eslint": "^10.1.0",
-    "browser-sync": "^2.26.13",
+    "browser-sync": "^2.26.14",
     "clean-css-cli": "^4.3.0",
     "cross-env": "^7.0.3",
     "eslint": "^7.19.0",
@@ -92,12 +92,13 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^8.2.4",
     "postcss-cli": "^8.3.1",
-    "rollup": "^2.38.2",
+    "rollup": "^2.38.3",
     "rollup-plugin-eslint": "^7.0.0",
     "rollup-plugin-terser": "^7.0.2",
-    "sass": "^1.32.5",
+    "sass": "^1.32.6",
     "stylelint": "^13.9.0",
-    "stylelint-config-twbs-bootstrap": "^2.1.0"
+    "stylelint-config-twbs-bootstrap": "^2.1.0",
+    "terser": "^5.5.1"
   },
   "dependencies": {
     "bootstrap": "5.0.0-beta1"
