nightshade variant and darkmode.js library (#6)
* remove vendor prefix, gets generated anyway

* remove @ extends, as this does not work in nested media queries (extends to base class)

* added nightshade scss

* compiled css

* compiled nightshade css

* added nightfall scss

* compiled nightfall css

* Update index.html

* adding eslint to the project

* getting the hang of this js module thing

* moved css from dist to dist/css

* fixed a few paths from the dist css move

* wip 2021-02-02

* Update README.md

* wip 2021-02-02

* nightshade variant and darkmode.js library ready

* compiled nightshade variant and darkmode.js library

--- a/package.json
+++ b/package.json
@@ -1,29 +1,40 @@
 {
   "name": "bootstrap-dark-5",
-  "version": "0.0.3",
+  "version": "0.1.0",
   "description": "The Ancillary Guide to Dark Mode and Bootstrap 5 - A continuation of the v4 Dark Mode POC",
   "main": "",
   "scripts": {
     "start": "npm-run-all --parallel serve watch",
-    "test": "echo \"Info: no test specified\" && exit 0",
-    "build": "npm-run-all css",
+    "test": "npm-run-all lint dist",
+    "lint": "npm-run-all --parallel css-lint js-lint",
+    "dist": "npm-run-all --parallel css js",
+    "DISABLED_serve": "browser-sync start --server --files [\"dist/css/*.css\", \"dist/js/*.js\", \"examples/*.*\", \"*.html\"]",
+    "serve": "browser-sync start --server",
     "css": "npm-run-all css-compile css-prefix css-minify",
-    "css-compile": "sass --style expanded --source-map --embed-sources --no-error-css --load-path=node_modules/bootstrap/scss scss/:dist/",
-    "css-prefix": "postcss --config build/postcss.config.js --replace \"dist/*.css\" \"!dist/*.rtl*.css\" \"!dist/*.min.css\"",
+    "css-compile": "sass --style expanded --source-map --embed-sources --no-error-css --load-path=node_modules/bootstrap/scss scss/:dist/css/",
+    "css-prefix": "postcss --config build/postcss.config.js --replace \"dist/css/*.css\" \"!dist/css/*.rtl*.css\" \"!dist/css/*.min.css\"",
     "css-minify": "npm-run-all --parallel css-minify-*",
-    "css-minify-main": "cleancss -O1 --format breakWith=lf --source-map --source-map-inline-sources --output dist/bootstrap.min.css dist/bootstrap.css",
-    "css-minify-night": "cleancss -O1 --format breakWith=lf --source-map --source-map-inline-sources --output dist/bootstrap-night.min.css dist/bootstrap-night.css",
-    "css-minify-dark": "cleancss -O1 --format breakWith=lf --source-map --source-map-inline-sources --output dist/bootstrap-dark.min.css dist/bootstrap-dark.css",
+    "css-minify-main": "cleancss -O1 --format breakWith=lf --source-map --source-map-inline-sources --output dist/css/bootstrap.min.css dist/css/bootstrap.css",
+    "css-minify-night": "cleancss -O1 --format breakWith=lf --source-map --source-map-inline-sources --output dist/css/bootstrap-night.min.css dist/css/bootstrap-night.css",
+    "css-minify-nightfall": "cleancss -O1 --format breakWith=lf --source-map --source-map-inline-sources --output dist/css/bootstrap-nightfall.min.css dist/css/bootstrap-nightfall.css",
+    "css-minify-nightshade": "cleancss -O1 --format breakWith=lf --source-map --source-map-inline-sources --output dist/css/bootstrap-nightshade.min.css dist/css/bootstrap-nightshade.css",
+    "css-minify-dark": "cleancss -O1 --format breakWith=lf --source-map --source-map-inline-sources --output dist/css/bootstrap-dark.min.css dist/css/bootstrap-dark.css",
     "css-lint": "npm-run-all --continue-on-error --parallel css-lint-*",
     "css-lint-stylelint": "stylelint \"**/*.scss\" --cache --cache-location .cache/.stylelintcache --rd",
     "css-lint-vars": "fusv scss/",
+    "js": "npm-run-all js-compile js-minify",
+    "js-compile": "rollup --environment MIN:false --config build/rollup.config.js --sourcemap",
+    "js-minify": "rollup --environment MIN:true --config build/rollup.config.js --sourcemap",
+    "js-lint": "eslint --cache --cache-location .cache/.eslintcache --report-unused-disable-directives .",
     "watch": "npm-run-all --parallel watch-*",
-    "watch-css-main": "nodemon --watch scss/ --ext scss --exec \"npm-run-all css-lint css-compile css-prefix\"",
-    "serve": "browser-sync start --server --files \"dist/*.css\"",
+    "watch-css-main": "nodemon --watch scss/ --ext scss --exec \"npm-run-all css-lint css-compile css-prefix && browser-sync reload\"",
+    "watch-js-main": "nodemon --watch js/src/ --ext js --exec \"npm-run-all js-lint js-compile js-minify && browser-sync reload\"",
+    "watch-examples": "nodemon --watch examples/ --ext html --exec \"browser-sync reload\"",
     "map-dark-vars": "npm-run-all --parallel map-dark-vars-*",
     "map-dark-vars-alt-to-core": "node ./build/make-dark-map.js ./build/dark-map-list.json '-alt' '' > ./scss/dark/_variables-map-alt-to-core.scss"
   },
   "author": "Vino Rodrigues",
+  "homepage": "https://vinorodrigues.github.io/bootstrap-dark-5/",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -32,11 +43,13 @@
   "bugs": {
     "url": "https://github.com/vinorodrigues/bootstrap-dark-5/issues"
   },
-  "style": "dist/bootstrap-dark.css",
+  "style": "dist/css/bootstrap-dark.css",
   "sass": "scss/bootstrap-dark.scss",
   "files": [
-    "dist/*.{css,map}",
+    "dist/css/*.{css,map}",
+    "dist/js/*.{js,map}",
     "scss/**/*.scss",
+    "js/**/*.js",
     "README.md",
     "LICENSE.md"
   ],
@@ -48,22 +61,45 @@
     "responsive",
     "front-end",
     "framework",
-    "web"
+    "web",
+    "dark",
+    "dark-mode",
+    "color",
+    "color-scheme",
+    "prefers-color-scheme"
   ],
   "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/plugin-proposal-private-methods": "^7.12.1",
+    "@babel/plugin-transform-async-to-generator": "^7.12.1",
+    "@babel/plugin-transform-regenerator": "^7.12.1",
+    "@babel/preset-env": "^7.12.11",
+    "@rollup/plugin-babel": "^5.2.3",
+    "@rollup/plugin-commonjs": "^17.1.0",
+    "@rollup/plugin-node-resolve": "^11.1.1",
+    "@rollup/plugin-replace": "^2.3.4",
     "autoprefixer": "^9.8.6",
-    "browser-sync": "^2.26.13",
+    "babel-eslint": "^10.1.0",
+    "browser-sync": "^2.26.14",
     "clean-css-cli": "^4.3.0",
     "cross-env": "^7.0.3",
+    "eslint": "^7.19.0",
+    "eslint-config-xo": "^0.34.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-unicorn": "^27.0.0",
     "find-unused-sass-variables": "^3.1.0",
     "nodemon": "^2.0.7",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.2.4",
     "postcss-cli": "^8.3.1",
-    "rtlcss": "^3.0.0",
-    "sass": "^1.32.5",
+    "rollup": "^2.38.3",
+    "rollup-plugin-eslint": "^7.0.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "sass": "^1.32.6",
     "stylelint": "^13.9.0",
-    "stylelint-config-twbs-bootstrap": "^2.1.0"
+    "stylelint-config-twbs-bootstrap": "^2.1.0",
+    "terser": "^5.5.1"
   },
   "dependencies": {
     "bootstrap": "5.0.0-beta1"
