--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "test": "npm-run-all lint dist",
     "lint": "npm-run-all --parallel css-lint js-lint",
     "dist": "npm-run-all --parallel css js",
-    "DISABLED_serve": "browser-sync start --server --files [\"dist/css/*.css\", \"dist/js/*.js\", \"examples/*.*\", \"*.html\"]",
+    "build": "echo \"Deprecated: Use `npm run dist`\" && npm-run-all dist",
+    "DISABLED_serve": "browser-sync start --server --files [\"dist/css/*.css\", \"dist/js/*.ts\", \"examples/*.*\", \"*.html\"]",
     "serve": "browser-sync start --server",
-    "css": "npm-run-all css-compile css-prefix css-minify",
+    "css": "npm-run-all css-wipe css-compile css-prefix css-minify",
+    "css-wipe": "rimraf ./dist/css",
     "css-compile": "sass --style expanded --source-map --embed-sources --no-error-css --load-path=node_modules/bootstrap/scss scss/:dist/css/",
     "css-prefix": "postcss --config build/postcss.config.js --replace \"dist/css/*.css\" \"!dist/css/*.rtl*.css\" \"!dist/css/*.min.css\"",
     "css-minify": "npm-run-all --parallel css-minify-*",
@@ -22,15 +24,18 @@
     "css-lint": "npm-run-all --continue-on-error --parallel css-lint-*",
     "css-lint-stylelint": "stylelint \"**/*.scss\" --cache --cache-location .cache/.stylelintcache --rd",
     "css-lint-vars": "fusv scss/",
-    "js": "npm-run-all js-compile js-minify",
-    "js-compile": "rollup --environment MIN:false --config build/rollup.config.js --sourcemap",
-    "js-minify": "rollup --environment MIN:true --config build/rollup.config.js --sourcemap",
-    "js-lint": "eslint --cache --cache-location .cache/.eslintcache --report-unused-disable-directives .",
+    "js": "npm-run-all js-wipe js-compile js-minify",
+    "js-wipe": "rimraf ./dist/js",
+    "js-compile": "tsc -p build",
+    "js-minify": "terser -c -m -o ./dist/js/darkmode.min.js ./dist/js/darkmode.js --source-map \"content='./dist/js/darkmode.js.map'\"",
+    "js-lint": "eslint --cache --cache-location .cache/.eslintcache --report-unused-disable-directives . --ext .ts",
     "watch": "npm-run-all --parallel watch-*",
     "watch-css-main": "nodemon --watch scss/ --ext scss --exec \"npm-run-all css-lint css-compile css-prefix && browser-sync reload\"",
-    "watch-js-main": "nodemon --watch js/src/ --ext js --exec \"npm-run-all js-lint js-compile js-minify && browser-sync reload\"",
+    "watch-js-main": "nodemon --watch js/src/ --ext ts --exec \"npm-run-all js-lint js-compile js-minify && browser-sync reload\"",
     "watch-examples": "nodemon --watch examples/ --ext html --exec \"browser-sync reload\"",
     "map-dark-vars": "npm-run-all --parallel map-dark-vars-*",
+    "docs": "npm-run-all --parallel docs-*",
+    "docs-darkmode-js": "exit 1",
     "map-dark-vars-alt-to-core": "node ./build/make-dark-map.js ./build/dark-map-list.json '-alt' '' > ./scss/dark/_variables-map-alt-to-core.scss"
   },
   "author": "Vino Rodrigues",
@@ -69,18 +74,9 @@
     "prefers-color-scheme"
   ],
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "@babel/plugin-proposal-private-methods": "^7.12.1",
-    "@babel/plugin-transform-async-to-generator": "^7.12.1",
-    "@babel/plugin-transform-regenerator": "^7.12.1",
-    "@babel/preset-env": "^7.12.11",
-    "@rollup/plugin-babel": "^5.2.3",
-    "@rollup/plugin-commonjs": "^17.1.0",
-    "@rollup/plugin-node-resolve": "^11.1.1",
-    "@rollup/plugin-replace": "^2.3.4",
+    "@typescript-eslint/eslint-plugin": "^4.14.2",
+    "@typescript-eslint/parser": "^4.14.2",
     "autoprefixer": "^9.8.6",
-    "babel-eslint": "^10.1.0",
     "browser-sync": "^2.26.14",
     "clean-css-cli": "^4.3.0",
     "cross-env": "^7.0.3",
@@ -93,13 +89,12 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^8.2.4",
     "postcss-cli": "^8.3.1",
-    "rollup": "^2.38.3",
-    "rollup-plugin-eslint": "^7.0.0",
-    "rollup-plugin-terser": "^7.0.2",
+    "rimraf": "^3.0.2",
     "sass": "^1.32.6",
     "stylelint": "^13.9.0",
     "stylelint-config-twbs-bootstrap": "^2.1.0",
-    "terser": "^5.5.1"
+    "terser": "^5.5.1",
+    "typescript": "^4.1.3"
   },
   "dependencies": {
     "bootstrap": "5.0.0-beta1"
