Pulling in JSDoc of darkmode.js module (#7)
* dropped rollup and babel in favour of typescript

* esm variant dropped in typescript builds

* all dist removed as CDN uses NPM package and keeping dist on git is not needed anymore

* added dist to ignore list

* oops, need some of the dist to run the gh-pages

* major update to docs

* updated links in index.html

* Update darkmode.js.md

* Update package.json

--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,7 @@
     "root": true,
     "env": {
       "browser": true,
-      "node": true,
+      "node": false,
       "jquery": false,
       "es6": true
     },
@@ -10,10 +10,19 @@
       "sourceType": "module",
       "allowImportExportEverywhere": true
     },
-    "extends": [
-      "eslint:recommended"
+    "plugins": [
+        "@typescript-eslint"
     ],
-    "parser": "babel-eslint",
+    "extends": [
+      "eslint:recommended",
+      "plugin:@typescript-eslint/eslint-recommended",
+      "plugin:@typescript-eslint/recommended"
+    ],
+    "parser": "@typescript-eslint/parser",
+    "ignorePatterns": [
+        "*.html",
+        "*.md"
+    ],
     "rules": {
         "capitalized-comments": "off",
         "indent": [
